[package]
name = "veriwasm"
version = "0.1.0"
authors = ["enjhnsn2 <e5johnso@eng.ucsd.edu>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PLSysSec/veriwasm"
description = "A safety verifier for native-compiled WebAssembly code"
keywords = ["verification", "WebAssembly", "security", "static-analysis", "binary-analysis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaxpeax-core = { version = "0.0.1-vw-tweaks" }
yaxpeax-arch = { version = "0.0.4", features = ["use-serde"] }
yaxpeax-x86 = "0.2.0"
"petgraph" = "0.4.13"
clap = "2.33.3"
object = "0.21.0"
byteorder = "1.3.4"
colored = "2.0.0"
serde_json = "1.0.59"
log = "*"
env_logger = "*"
goblin = "*"
