[package]
name = "veriwasm"
version = "0.1.0"
authors = ["enjhnsn2 <e5johnso@eng.ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This commit (`f9dc5c2...`) is the `vw-tweaks` branch.
yaxpeax-core = { git = "https://github.com/mkolosick/yaxpeax-core/", branch = "veriwasm" }
yaxpeax-arch = { version = "0.0.4", features = ["use-serde"] }
yaxpeax-x86 = { git = "https://github.com/mkolosick/yaxpeax-x86/", branch = "veriwasm" }
"petgraph" = "0.4.13"
clap = "2.33.3"
object = "0.21.0"
byteorder = "1.3.4"
colored = "2.0.0"
serde_json = "1.0.59"
log = "*"
env_logger = "*"
goblin = "*"
wasmtime = { path = "../wasmtime/crates/wasmtime" }
wasmtime-jit = { path = "../wasmtime/crates/jit" }
lucet-module = { path = "../lucet_sandbox_compiler/lucet-module", version = "0.1.1", package="lucet-module-wasmsbx" }
elfkit = "0.0.4"
